[package]
name = "ytmdctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arg = { version = "0.4.1", features = ["std"] }
env_home = "0.1.0"
once_cell = "1.19.0"
parse_duration = "2.1.1"
reqwest = "0.11"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
serde_repr = "0.1.19"
tokio = { version = "1", features = ["full"] }
